# neoleo

./: .autotools  .cproject  .cvsignore  .gitignore  .project  AUTHORS  CMakeLists.txt  ChangeLog  FAQ  INSTALL  INSTALL-arch  INSTALL-arch.md  INSTALL-cygwin  INSTALL-debian  INSTALL-debian.md  INSTALL-fedora.md  INSTALL-slack.md  INSTALL-ubuntu  INSTALL.md  Makefile.am  Makefile.in  Makefile.neo  NEWS  NEWS.txt  PACKAGING  README  README-alpha  README-cygwin  README-ubuntu  README.md  README.ubuntu  Sanitise.cmake  THANKS  TODO  acconfig.h  aclocal.m4  conf  conf-efence  config.h.in  config.pl  (+11 more)
2025/: Makefile-doc.am  config-doc.pl  configure.ac
CVS/: Entries  Repository
TR/: CONTENTS  TR01  TR02  TR03  TR04  TR05  TR06  TR07  TR08  TR09
Xresources/: Makefile.am  Makefile.in  Oleo.en  Oleo.fr  Oleo.nl
Xresources/CVS/: Entries  Repository  Root
afm/: Makefile.am  Makefile.in
aur/: .gitignore  PKGBUILD.m4  PKGBUILD.tmpl  README  macros.m4  makeit.py  mksetup
bak/: Makefile.am  args.cc  busi.cc  busi.scr  byte-compile.cc  configure.in  date.cc  decompile.h  defun.h  defuns-1.h  defuns.h  display.h  eval.cc  getdate.yy  io-visual.cc  io-visual.h  io-x11.cc  io-x11.h  key.h  line.cc  line.h  mem.h  mysql.c  mysql.h  parse.yy  posixtm.yy  sc.cc  sc.h  shell.cc  shell.h  sort.cc  sort.h  stub.cc  stubs.h  sylk.cc  sylk.h
bak/Xresources/: Makefile.am  Oleo.en  Oleo.fr
bak/afm/: Makefile.am
bak/doc/: bugs.texi  cell-refs.texi  dbms.texi  expressions.texi  functions.texi  headless.texi  keymaps.texi  neoleo.texi  print-plot.texi  quickstart.texi  ranlib.texi  style.texi  windows.texi
bak/intl/: Makefile.am  Makefile.in
bak/lib/: .gitignore  Makefile.am  getopt.c  random.c
bak/po/: en.po  nl.gmo  oleo.pot
bak7/: forminfo.cc  gsl.cc  gsl.h  hash.cc  hash.h  help.cc  help.h  init-keys  ir.h  list.cc  mdi.h  sort-region.cc  stringo.cc  tr.py
doc/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Man.cmake  atlast2.html  basics.texi  bugs.texi  cell-refs.texi  cells.texi  dbms.texi  entering-data.texi  examples.texi  expressions.texi  forth.texi  functions.texi  headless.texi  htmlxref.cnf  interface.texi  invoking.texi  keymaps.texi  keys.texi  macros.texi  making-changes.texi  neoleo.1  neoleo.texi  oleo.info  oleo.info-1  oleo.info-2  oleo.info-3  oleo.info-4  oleo.texi  oleo_web.html  options.texi  print-plot.texi  programs.texi  quickstart.texi  style.texi  tcl.texi  texi2html.in  (+3 more)
doc/CVS/: Entries  Repository
doc/bak/: Makefile.in  forth.texi  motif.texi
docs/: Alignment.html  Appearance.html  Basic-Kbd-Macro.html  Basics.html  Boolean-functions.html  Business-functions.html  Cell-Height.html  Cell-Motion.html  Cell-referencing.html  Change-Window.html  Clearing-Plots.html  Command-Index.html  Command-Line-Options.html  Commands-in-Programs.html  Comparison.html  (+92 more)
examples/: CMakeLists.txt  Makefile.am  Makefile.in  blank.oleo  bold.oleo  common.fs  create_koers.txt  crib.txt  cs.py  data.sql  dates.oleo  docs.oleo  formula.sylk  headless.tcl  issue38.oleo  large.oleo  log.bas  loop.oleo  malformed.oleo  mkcsv.py  mysql.oleo  neodsv.py  neog.py  nogood.oleo  oleo-brownian.py  oleo.pm6  oleo42.sh  paine.slk  pattern.bas  pi.bas  pids.py  pivot-driver.tcl  pivot-utils.tcl  pivot.oleo  pivot.r  plot.oleo  point3.oleo  q110399.csv  ref.oleo  rnd5  (+14 more)
examples/CVS/: Entries  Repository
examples/accounts/: .gitignore  README.md  accts-plate.oleo  accts.oleo  accum.tcl  mkscr.pl  process  process-1  trans.oleo
examples/accounts/bak/: mkscr.pl  process
examples/c++/: Makefile  README.md  main.cc
examples/plot/: README.md  data.oleo  mkplot
examples/procs/: neopids  pids.bas  pids.py  sleepy  youtube-script.txt
lib/: .cvsignore  Makefile.am  Makefile.in  error.c  getdate.y
lib/CVS/: Entries  Repository
m4/: Makefile.am  Makefile.in  ac_find_xlt.m4  ax_asan.m4  ax_coverage.m4  ax_debug.m4  ax_form.m4  ax_fortify.m4  ax_gprof.m4  ax_info.m4  ax_motif_xbae.m4  ax_x.m4  lcmessage.m4  motif.m4  sciplot.m4  x11.m4  xbae.m4  xmhtml.m4  xp.m4
m4/CVS/: Entries  Repository
m4/bak/: ax_motif_xbae.m4  cxx.m4  motif.m4  progtest.m4
src/: .cvsignore  .gdbinit  .gitignore  CMakeLists.txt  Makefile.am  afm.c  alt-cells.cc  alt-cells.h  alt-lex.cc  alt-lex.h  alt-parse.cc  alt-parse.h  alt-types.h  alt_cells.cc  alt_cells.h  appres.c  appres.h  args.c  args.cc  args.h  atlast.c  atlast.h  atldef.h  atoleo.c  atoleo.cc  atoleo.h  basic.c  basic.cc  basic.h  blang-lex.cc  blang-parse.cc  blang2.cc  blang2.h  blx.cc  busi.c  busi.cc  busi.h  byte-compile.c  byte-compile.cc  byte-compile.h  (+243 more)
src/CVS/: Entries  Repository
src/bak/: Makefile.am.2  Makefile.in  afm.cc  afm.h  atlast.c.1  atlast.h  atldef.h  atldef.h.1  atoleo.cc  epson.c  epson.h  font.cc  graph.cc  io-motif.h  io-utils.cc.1  legend.cc  neog.pm6  neot.c  numeric.h.1  plotter.c  postscript.c  postscript.h  print.c  prtext.c  prtext.h  sciplotI.h  xrdb.h
tests/: .cproject  .project  CMakeLists.txt  Makefile.am  badrc.oleo  badrc.scr  badrc.sh  basic.sh  blang-01.bas  blang-01.sh  busi.scr  cellspans.scr  certify  concata.scr  cpreg-01.scr  cpreg-02.scr  cpreg-03.scr  ctime.scr  ctime.sh  decompile-01.scr  differ  floor.scr  inbuilt-tests.sh  insert-01.scr  insert-01.sh  issue15.scr  issue16.scr  issue16.sh  issue17.scr  issue18.scr  issue18.sh  issue19.scr  issue25.oleo  issue25.sh  issue51.scr  issue51.sh  neobasic01.sh  neobasic02.sh  neobasic03.bas  neobasic03.sh  (+49 more)
tests/verified/: Makefile.am  badrc.scr.oleo  blang-01.bas.rep  busi.scr.oleo  cellspans.scr.oleo  concata.scr.oleo  cpreg-02.scr.oleo  cpreg-03.scr.oleo  ctime.scr.oleo  decompile-01.scr.oleo  floor.scr.oleo  insert-01.scr.oleo  issue15.scr.oleo  issue16.oleo  issue16.scr.oleo  issue17.scr.oleo  issue18.oleo  issue18.scr.oleo  issue19.scr.oleo  issue25.rep  neobasic02.dsv  neobasic03.rep  nohead-01.oleo  nohead-01.scr.oleo  nohead-02.scr.oleo  parser.rep  picol-01.txt  read.oleo  ref01.oleo  row-del.scr.oleo  row-ins.scr.oleo  spans.oleo  stringo.scr.oleo  tcl01.rep  tcl05.rep  tcl07.oleo  tcl08.rep  tcl1.tcl.rep  tcl10.oleo  tcl2.rep  (+4 more)
(+77 files in other folders)
