# 25/10 Using current processes for making info

info_TEXINFOS = neoleo.texi

neoleo_TEXINFOS = headless.texi

EXTRA_DIST=	$(neoleo_TEXINFOS) # neoleo_web.html # texi2html
#noinst_DATA =	neoleo_web.html $(TEXIS)

#neoleo.info:	neoleo.texi $(TEXIS)


#htmldir=	$(prefix)/share/neoleo
#html_DATA=	html

#neoleo.html:	$(srcdir)/neoleo.texi ${TEXIS} $(top_builddir)/doc/texi2html
#		@HAVE_PERL@ $(top_builddir)/doc/texi2html $(srcdir)/neoleo.texi
		
#html: neoleo.texi headless.texi		


#DISTCLEANFILES = $(html_DATA)
#MAINTAINERCLEANFILES = Makefile.in

