#
# $Header: /cvs/oleo/examples/Makefile.am,v 1.9 2001/02/08 00:21:23 pw Exp $
#

exampledir = $(datadir)/oleo/examples

OLEOS = blank.oleo \
	docs.oleo \
	loop.oleo \
	mysql.oleo\
	nogood.oleo \
	pivot.oleo \
	plot.oleo \
	shit.oleo \
	test.oleo \
	types.oleo \
	xy.oleo

EXTRA_DIST = $(OLEOS) \
	q110399.csv formula.sylk paine.slk \
	create_koers.txt data.sql 


EXTRA_DIST += pivot.r


dist_example_DATA = $(EXTRA_DIST)

#MAINTAINERCLEANFILES = Makefile.in

