exampledir = $(datadir)/neoleo/examples
OLEOS := \
	blank.oleo \
	bold.oleo \
	dates.oleo \
	docs.oleo \
	issue38.oleo \
	large.oleo \
	loop.oleo \
	malformed.oleo \
	mysql.oleo \
	nogood.oleo \
	pivot.oleo \
	plot.oleo \
	point3.oleo \
	test.oleo \
	types.oleo \
	xy.oleo


EXTRA_DIST = $(OLEOS) \
	q110399.csv oleo.pm6


EXTRA_DIST += pivot.r


dist_example_DATA = $(EXTRA_DIST)

#MAINTAINERCLEANFILES = Makefile.in

