exampledir = $(datadir)/neoleo/examples
#OLEOS := $(shell ls *.oleo)


CSVS = 
OLEOS = blank.oleo bold.oleo dates.oleo docs.oleo issue38.oleo large.oleo loop.oleo malformed.oleo \
	nogood.oleo point3.oleo simple.oleo test.oleo types.oleo utf8.oleo
	
# TODO these are put in the wrong directory 
PROCS = procs/neopids procs/pids.bas procs/pids.py procs/sleepy procs/youtube-script.txt	

PYS = cs.py mkcsv.py neog.py

SCRS = q.scr

EXTRA_DIST = $(OLEOS) $(PROCS) $(PYS) \
     	     q110399.csv simple.csv


# EXTRA_DIST += pivot.r


dist_example_DATA = $(EXTRA_DIST)

#MAINTAINERCLEANFILES = Makefile.in

