#
# $Header: /sources/oleo/oleo/m4/Makefile.am,v 1.14 2011/07/05 06:52:44 delqn Exp $
#
# Process this file with automake to produce Makefile.in -*- Makefile -*-
#
EXTRA_DIST = gettext.m4 lcmessage.m4 \
	     progtest.m4 x11.m4 motif.m4 sciplot.m4 xmhtml.m4
#delqn: removed codeset.m4 glibc21.m4 iconv.m4 intdiv0.m4 intmax.m4 \
	     inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 \
	     lib-ld.m4 lib-link.m4 lib-prefix.m4 longdouble.m4 \
	     longlong.m4 nls.m4 po.m4 printf-posix.m4 signed.m4 \
	     size_max.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4 \
	     wchar_t.m4 wint_t.m4 xsize.m4 
MAINTAINERCLEANFILES = Makefile.in

